get app by filter
